<resources>

    <string name="app_name">Halloon</string>
    <string name="menu_settings">Settings</string>
    
    <string  name="title_select_all">Home</string>
    <string name="title_select_auth">Authorize</string>
    <string name="title_select_special">Special</string>
    <string name="title_select_official">Public</string>

    <!-- pull to refresh  -->
	<string name="pull_to_refresh_pull_label">pull to refresh&#8230;</string>
	<string name="pull_to_refresh_footer_pull_label">pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">release to get more&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">click to refresh&#8230;</string>
    <string name="refresh_at">recently updated in</string>
    <string name="refresh_failure">refresh failure</string>
    
    <!-- location -->
    <string name="location">Location</string>
    <string name="no_location">could not locate</string>
    <string name="waiting_for_location">waiting for location</string>
    <string name="getting_locaiton">getting location info&#8230;</string>
    <string name="location_accurate">got accurate location</string>
    <string name="location_no_accurate">for accurate location,please open GPS</string>
    <string name="location_up_to_date">Got an up-to-date location</string>
    <string name="location_no_up_to_date">No up-to-date location</string>
    <string name="location_got_one">Got a location</string>
    <string name="no_address">Geocoder ( a Googld Maps API service) didn\'t get an address for this location</string>
    <string name="geocoder_exception">Geocoder ( a Googlde Maps API service) could\'t get location information</string>
    
    <!-- file input&output -->
    <string name="saved">saved</string>
    <string name="could_not_save_check_sdcard">could not save image</string>
    
    <!-- tweet title -->
    <string name="account">account</string>
    <string name="idol">idol</string>
    <string name="fav">fav</string>
    <string name="fan">fan</string>
    <string name="wblog">tweet</string>
    <string name="refresh">refresh</string>
    <string name="back">back</string>
    <string name="nearby_tweet">nearby tweet</string>
    <string name="personal_profile">profile</string>
    <string name="edit">edit</string>
    <string name="tweet_detail">tweet detail</string>
    <string name="more">more&#8230;</string>
    <string name="search_more">more&#8230;</string>
    <string name="tweet_publish">send tweet</string>
    
    <!-- publish toast -->
    <string name="nothing_to_say">nothing to tweet?</string>
    
    <!-- tab -->
    <string name="tab_mainpage">main</string>
    <string name="tab_message">message</string>
    <string name="tab_profile">profile</string>
    <string name="tab_contacts">contacts</string>
    <string name="tab_square">square</string>
    <string name="tab_more">more</string>
    
    <!-- content -->
    <string name="add">add</string>
    <string name="area">area</string>
    <string name="motto">motto</string>
    <string name="tag">tag</string>
    <string name="send_message">send message</string>
    <string name="from">from</string>
    <string name="re_tweet">retweet:</string>
    <string name="retweet">retweet</string>
    <string name="like">like</string>
    <string name="copy">copy</string>
    <string name="delete">delete</string>
    <string name="say_something">say something</string>
    <string name="publish">send</string>
    <string name="delete_tweet">delete tweet</string>
    <string name="confirm_delete">delete?</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="open">open</string>
    <string name="sending">sending</string>
    <string name="sent">sent</string>
    <string name="send_failure">sent failure</string>
    <string name="connection_failure">connection failure</string>
    <string name="already_copy">copied</string>
    <string name="i_am">I\'m in </string>
    <string name="tweet_not_exist">tweet do not exist!</string>
    <string name="save">save</string>
    <string name="close">close</string>
    <string name="ten_thousands">0thousands</string>
    <string name="one_hundred_million">00millions</string>
    <string name="file_size_out_of_range">file size out of range</string>
    <string name="can_not_find_sd_card">could not find sdcard</string>
    <string name="load_image_failure">load image failure</string>
    <string name="parse_gif">parsing gif</string>
    <string name="delete_failure">delete failureT_T</string>
    <string name="take_a_shot">take a shot</string>
    <string name="find_in_album">find in album</string>
    <string name="failure">failure</string>
    <string name="success">success</string>
    <string name="basic_info">basic info</string>
    <string name="nick">nick</string>
    <string name="sex">gender</string>
    <string name="name">name</string>
    <string name="address">addr</string>
    <string name="signature">sign</string>
    <string name="interest">interest</string>
    
    <!-- message tag title -->
    <string name="private_message">private message</string>
    <string name="comment">comment</string>
    <string name="at_me">\ @me</string>
    <string name="reply_me">reply</string>
    <string name="about">about</string>
    
    <!-- setttings tags -->
    <string name="arguments_settings">arg settings</string>
    <string name="accounts_management">accounts management</string>
    <string name="browse_mode">browse mode</string>
    <string name="themes_management">themes management</string>
    <string name="system_plugins">system plugins</string>
    <string name="popular_softwares">popular softwares</string>
    <string name="privacy_settings">privacy settings</string>
    <string name="flow_count">flow count</string>
    <string name="about_halloon">about halloon</string>
    <string name="feedback">feedback</string>
    <string name="clear_cache">clear cache</string>
    
    <string name="exit">exit</string>
    
    <!--  about message -->
    <string name="about_title">name:halloon\nedition:1.0.0\n</string>
    <string name="about_intro">[app info]\n\thalloon is an unofficial client for tecent microblog, we intend to impove the user experiment of official tecent microblog.</string>
    <string name="about_story">[应用故事]\n\t恩哈的理念是简约却不简单，我们的</string>
    <string name="about_thanks">[致谢]\n\t恩哈客户端里边的内容资源都是由XXX等编码完成。。。</string>
    <string name="about_tontact">contact us\:：</string>
    <string name="about_sina"> \@Halloon</string>
    <string name="about_weixin"> Halloon</string>
    
    <!-- profile -->
    <string name="hint_edit_input">please input </string>
    <string name="save_success">save success!</string>
    <string name="album">album</string>
    <string name="check_update">检查更新</string>
    <string name="function_intro">功能介绍</string>
    <string name="welcome_page">欢迎页</string>
    <string name="is_fans">粉丝</string>
    <string name="not_fans"></string>
    <string name="is_idol">取消关注</string>
    <string name="not_idol">关注</string>
    
    <string name="input_name_hint">4-30个字符，支持中英文、数字</string>
    <string name="input_sign_hint">请不要超过70个字</string>
    <string name="start_user_recommend">名人推荐</string>
    <string name="hot_topic">话题热榜</string>
    <string name="hottrans"></string>
    <string name="hot_trans">转播热榜</string>
    <string name="suffix_fans">的粉丝</string>
    <string name="suffix_idol">的关注</string>
    
</resources>
