<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/slide_width"
    android:layout_height="match_parent"
    android:background="@color/bg_slide_menu" >

    <RelativeLayout
        android:id="@+id/relative_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingTop="40dp" >

        <com.halloon.android.widget.CircleImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/slide_icon_side"
            android:layout_height="@dimen/slide_icon_side"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/tab_page_indicator_text" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_profile" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linear_main"
                style="@style/SlideChildLinear"
                android:layout_below="@+id/relative_profile" >

                <ImageView
                    android:id="@+id/icon"
                    style="@style/SlideImg"
                    android:src="@drawable/ic_tab_home" />

                <TextView
                    android:id="@+id/tabsText"
                    style="@style/SlideTextView"
                    android:text="@string/tab_mainpage" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_message"
                style="@style/SlideChildLinear"
                android:layout_below="@+id/linear_main" >

                <ImageView
                    android:id="@+id/icon"
                    style="@style/SlideImg"
                    android:src="@drawable/ic_tab_msg" />

                <TextView
                    android:id="@+id/tabsText"
                    style="@style/SlideTextView"
                    android:text="@string/tab_message" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_contacts"
                style="@style/SlideChildLinear"
                android:layout_below="@+id/linear_message" >

                <ImageView
                    android:id="@+id/icon"
                    style="@style/SlideImg"
                    android:src="@drawable/ic_tab_contacts" />

                <TextView
                    android:id="@+id/tabsText"
                    style="@style/SlideTextView"
                    android:text="@string/tab_contacts" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_square"
                style="@style/SlideChildLinear"
                android:layout_below="@+id/linear_contacts" >

                <ImageView
                    android:id="@+id/icon"
                    style="@style/SlideImg"
                    android:src="@drawable/ic_tab_square" />

                <TextView
                    android:id="@+id/tabsText"
                    style="@style/SlideTextView"
                    android:text="@string/tab_square" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_more"
                style="@style/SlideChildLinear"
                android:layout_below="@+id/linear_square" >

                <ImageView
                    android:id="@+id/icon"
                    style="@style/SlideImg"
                    android:src="@drawable/ic_tab_more" />

                <TextView
                    android:id="@+id/tabsText"
                    style="@style/SlideTextView"
                    android:text="@string/tab_more" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>