<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16.0dip"
    android:orientation="vertical"
    android:background="#F5F5F5" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6.0dip"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:layout_marginTop="16.0dip"
        android:background="@drawable/round_corner_margin_blue" >

        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/arguments_settings"
            android:textColor="#777777"
            android:textSize="15.0dip" />

        <ImageView
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6.0dip"
            android:layout_marginTop="10.0dip"
            android:src="@drawable/h_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:layout_below="@+id/setting"
            android:layout_marginTop="7.0dip"
            android:background="#0085DF" />

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setting"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="16.0dip"
            android:text="@string/accounts_management"
            android:textColor="#777777"
            android:textSize="15.0dip" />

        <ImageView
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignRight="@+id/account"
            android:layout_alignTop="@+id/account"
            android:layout_marginRight="6.0dip"
            android:src="@drawable/h_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:layout_below="@+id/account"
            android:layout_marginTop="5.0dip"
            android:background="#0085DF" />

        <TextView
            android:id="@+id/browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="14.0dip"
            android:text="@string/browse_mode"
            android:textColor="#777777"
            android:textSize="15.0dip" />

        <CheckBox
            android:id="@+id/browser_mode_switcher"
            android:layout_width="wrap_content"
            android:layout_height="20.0dip"
            android:layout_alignRight="@+id/browser"
            android:layout_alignTop="@+id/browser" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:layout_below="@+id/browser"
            android:layout_marginTop="5.0dip"
            android:background="#0085DF" />

        <TextView
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/browser"
            android:layout_marginLeft="12.0dip"
            android:layout_marginTop="14.0dip"
            android:text="@string/themes_management"
            android:textColor="#777777"
            android:textSize="15.0dip" />

        <ImageView
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_alignRight="@+id/theme"
            android:layout_alignTop="@+id/theme"
            android:layout_marginRight="6.0dip"
            android:src="@drawable/h_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="7.0dip"
            android:layout_below="@+id/theme" />
    </RelativeLayout>
   
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_marginBottom="6.0dip"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:background="@drawable/round_corner_margin_blue">
        
        <TextView
            android:id="@+id/systemplugin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:layout_marginLeft="12.0dip"
            android:text="@string/system_plugins"
            android:textSize="15.0dip"
            android:textColor="#777777" />
        
        <ImageView 
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginRight="6.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_alignParentRight="true"
            android:src="@drawable/h_arrow" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="6.0dip"
            android:layout_below="@+id/systemplugin"
            android:background="#0085DF" />
        
        <TextView
            android:id="@+id/hotsoftware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:layout_marginLeft="12.0dip"
            android:layout_below="@+id/systemplugin"
            android:text="@string/popular_softwares"
            android:textSize="15.0dip"
            android:textColor="#777777" />
        
        <ImageView 
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginRight="6.0dip"
            android:layout_alignTop="@+id/hotsoftware"
            android:layout_alignRight="@+id/hotsoftware"
            android:src="@drawable/h_arrow"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="6.0dip"
            android:layout_below="@+id/hotsoftware"
            android:background="#0085DF" />
        
        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotsoftware"
            android:layout_marginTop="15.0dip"
            android:layout_marginLeft="12.0dip"
            android:text="@string/privacy_settings"
            android:textSize="15.0dip"
            android:textColor="#777777" />
        
        <ImageView
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginRight="6.0dip"
            android:layout_alignTop="@+id/privacy"
            android:layout_alignRight="@+id/privacy"
            android:src="@drawable/h_arrow" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="6.0dip"
            android:layout_below="@+id/privacy"
            android:background="#0085DF" />
        
        <TextView 
            android:id="@+id/flowanaly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/privacy"
            android:layout_marginTop="14.0dip"
            android:layout_marginLeft="12.0dip"
            android:text="@string/flow_count"
            android:textSize="15.0dip"
            android:textColor="#777777" />
        
        <ImageView
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginRight="6.0dip"
            android:layout_alignTop="@+id/flowanaly"
            android:layout_alignRight="@+id/flowanaly"
            android:src="@drawable/h_arrow" />
        <View
            android:layout_width="match_parent"
            android:layout_height="8.0dip"
            android:layout_below="@+id/flowanaly" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:layout_marginLeft="15.0dip"
        android:layout_marginRight="15.0dip"
        android:background="@drawable/round_corner_margin_blue">
        
        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:layout_marginLeft="12.0dip"
            android:text="@string/about_halloon"
            android:textSize="15.0dip"
            android:textColor="#777777" />
        
        <ImageView 
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginTop="6.0dip"
            android:layout_marginRight="6.0dip"
            android:layout_alignParentRight="true"
            android:src="@drawable/h_arrow" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:layout_marginTop="6.0dip"
            android:layout_below="@+id/about"
            android:background="#0085DF" />
        
        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dip"
            android:layout_marginLeft="12.0dip"
            android:layout_below="@+id/about"
            android:text="@string/feedback"
            android:textSize="15.0dip"
            android:textColor="#777777" />
        
        <ImageView 
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginRight="6.0dip"
            android:layout_alignTop="@+id/feedback"
            android:layout_alignRight="@+id/feedback"
            android:src="@drawable/h_arrow"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="8.0dip"
            android:layout_below="@+id/feedback" />
        
    </RelativeLayout>
    
</LinearLayout>