<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_about" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_about"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip" >

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="10.0dip"
            android:text="@string/app_name"
            android:textSize="17.0dip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="10.0dip"
            android:text="@string/about_intro"
            android:textSize="15.0dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_item_height"
            android:layout_marginTop="20.0dip"
            android:background="@color/bg_about_item" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:text="@string/check_update"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/txt_about"
                android:textSize="@dimen/txt_about_item" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/about_arrow_side"
                android:layout_height="@dimen/about_arrow_side"
                android:layout_marginRight="7dp"
                android:contentDescription="@string/app_name"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/h_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_item_height"
            android:layout_marginTop="1dip"
            android:background="@color/bg_about_item" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:text="@string/function_intro"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/txt_about"
                android:textSize="@dimen/txt_about_item" />

            <ImageView
                android:layout_width="@dimen/about_arrow_side"
                android:layout_height="@dimen/about_arrow_side"
                android:layout_marginRight="7dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:layout_centerVertical="true"
                android:src="@drawable/h_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_welcome"
            android:layout_width="match_parent"
            android:layout_height="@dimen/about_item_height"
            android:layout_marginTop="1dip"
            android:background="@color/bg_about_item" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:text="@string/welcome_page"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/txt_about"
                android:textSize="@dimen/txt_about_item" />

             <ImageView
                android:layout_width="@dimen/about_arrow_side"
                android:layout_height="@dimen/about_arrow_side"
                android:layout_marginRight="7dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:layout_centerVertical="true"
                android:src="@drawable/h_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </View>
    </LinearLayout>

</LinearLayout>